Bug 707868: Fix remaining device calls to fwrite()

Devices should all be using gp_fwrite().